# MCA_Py

./: README.md  pyproject.toml
src/MCA_Py/: dist.py  main.py  mca.py  mca_steps.py
src/MCA_Py/RFiles/: RunMCATesting.R  SettingUpRStudioForTestingCellID.txt  cell.R  mca.R
src/MCA_Py/doc/: loadAssay.txt  loadingInputDataMCA.txt
tests/: README.txt  test.py
